# archives.poucostrocos

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml  tailwind.config.js
src/: controller.rs  domain.rs  main.rs  utils.rs
src/controller/: auth.rs  home.rs  login.rs
src/domain/: household.rs  user.rs
src/utils/: database.rs  env.rs  googleapi.rs
static/css/: compiled.css
templates/tera/: base.html.tera
templates/tera/home/: index.html.tera
