[package]
name = "poucostrocos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
